fix z-index header

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@
     top: 0;
     right: 0;
     width: calc(100% - 200px);
+    z-index: 999;
 }
 
 .container{
